--- a/design/Paging_Manage/home.html
+++ b/design/Paging_Manage/home.html
@@ -1502,7 +1502,7 @@
         </div>
 
         <!-- saved-one (Group) -->
-        <div id="u101" class="ax_default" data-label="saved-one" data-left="80" data-top="275" data-width="212" data-height="76">
+        <div id="u101" class="ax_default" data-label="saved-one" data-left="80" data-top="275" data-width="212" data-height="59">
 
           <!-- box1 (Rectangle) -->
           <div id="u102" class="ax_default box_1" data-label="box1">
@@ -1521,7 +1521,7 @@
           <div id="u104" class="ax_default paragraph">
             <div id="u104_div" class=""></div>
             <div id="u104_text" class="text ">
-              <p><span>State: In Progress; Errors: Without, Key:Value, Key: Value</span></p>
+              <p><span>Key:Value, Key: Value</span></p>
             </div>
           </div>
 
@@ -1534,16 +1534,16 @@
           </div>
 
           <!-- star1 (Rectangle) -->
-          <div id="u106" class="ax_default label ax_default_hidden" data-label="star1" style="display:none; visibility: hidden">
+          <div id="u106" class="ax_default label" data-label="star1">
             <div id="u106_div" class=""></div>
             <div id="u106_text" class="text ">
-              <p><span></span></p>
+              <p><span></span></p>
             </div>
           </div>
         </div>
 
         <!-- saved-two (Group) -->
-        <div id="u107" class="ax_default" data-label="saved-two" data-left="80" data-top="351" data-width="212" data-height="54">
+        <div id="u107" class="ax_default" data-label="saved-two" data-left="80" data-top="333" data-width="212" data-height="75">
 
           <!-- box2 (Rectangle) -->
           <div id="u108" class="ax_default box_1" data-label="box2">
@@ -1562,7 +1562,7 @@
           <div id="u110" class="ax_default paragraph">
             <div id="u110_div" class=""></div>
             <div id="u110_text" class="text ">
-              <p><span>Priority: 2</span></p>
+              <p><span>State: In Progress; Errors: Without, Priority: 2</span></p>
             </div>
           </div>
 
@@ -1575,7 +1575,7 @@
           </div>
 
           <!-- star1 (Rectangle) -->
-          <div id="u112" class="ax_default label ax_default_hidden" data-label="star1" style="display:none; visibility: hidden">
+          <div id="u112" class="ax_default label" data-label="star1">
             <div id="u112_div" class=""></div>
             <div id="u112_text" class="text ">
               <p><span></span></p>
@@ -1584,7 +1584,7 @@
         </div>
 
         <!-- saved - 3 (Group) -->
-        <div id="u113" class="ax_default" data-label="saved - 3" data-left="80" data-top="405" data-width="213" data-height="62">
+        <div id="u113" class="ax_default" data-label="saved - 3" data-left="80" data-top="409" data-width="213" data-height="62">
 
           <!-- Unnamed (Rectangle) -->
           <div id="u114" class="ax_default box_1">
@@ -1616,10 +1616,10 @@
           </div>
 
           <!-- star1 (Rectangle) -->
-          <div id="u118" class="ax_default label ax_default_hidden" data-label="star1" style="display:none; visibility: hidden">
+          <div id="u118" class="ax_default label" data-label="star1">
             <div id="u118_div" class=""></div>
             <div id="u118_text" class="text ">
-              <p><span></span></p>
+              <p><span></span></p>
             </div>
           </div>
         </div>
@@ -1843,7 +1843,7 @@
         </div>
 
         <!-- Process filters (Group) -->
-        <div id="u146" class="ax_default" data-label="Process filters" data-left="77" data-top="222" data-width="213" data-height="576">
+        <div id="u146" class="ax_default" data-label="Process filters" data-left="77" data-top="547" data-width="213" data-height="251">
 
           <!-- Unnamed (Droplist) -->
           <div id="u147" class="ax_default list_box">
@@ -1958,7 +1958,7 @@
           <div id="u161" class="ax_default link_button selected" data-label="reset dates">
             <div id="u161_div" class="selected"></div>
             <div id="u161_text" class="text ">
-              <p><span>Reset Dates</span></p>
+              <p><span>Clear Dates</span></p>
             </div>
           </div>
 
@@ -2186,10 +2186,43 @@
         <img id="u192_img" class="img " src="images/home/u192.png"/>
       </div>
 
+      <!-- Saved filters group (Group) -->
+      <div id="u193" class="ax_default ax_default_hidden" data-label="Saved filters group" style="display:none; visibility: hidden" data-left="0" data-top="0" data-width="0" data-height="0">
+
+        <!-- KVP - saved outline (Rectangle) -->
+        <div id="u194" class="ax_default box_2" data-label="KVP - saved outline" title="Saved Filter List: Issues">
+          <div id="u194_div" class=""></div>
+        </div>
+
+        <!-- KVP saved 2 (Rectangle) -->
+        <div id="u195" class="ax_default box_2" data-label="KVP saved 2">
+          <div id="u195_div" class=""></div>
+          <div id="u195_text" class="text ">
+            <p><span>Key: Value,&nbsp; Key: Value&nbsp; &nbsp; </span></p>
+          </div>
+        </div>
+
+        <!-- saved filters label (Rectangle) -->
+        <div id="u196" class="ax_default paragraph" data-label="saved filters label">
+          <div id="u196_div" class=""></div>
+          <div id="u196_text" class="text ">
+            <p><span>Issues: </span></p>
+          </div>
+        </div>
+
+        <!-- delete (Rectangle) -->
+        <div id="u197" class="ax_default paragraph" data-label="delete">
+          <div id="u197_div" class=""></div>
+          <div id="u197_text" class="text ">
+            <p><span>x</span></p>
+          </div>
+        </div>
+      </div>
+
       <!-- no filters (Rectangle) -->
-      <div id="u193" class="ax_default heading_1" data-label="no filters">
-        <div id="u193_div" class=""></div>
-        <div id="u193_text" class="text ">
+      <div id="u198" class="ax_default heading_1" data-label="no filters">
+        <div id="u198_div" class=""></div>
+        <div id="u198_text" class="text ">
           <p><span>No filters are applied.</span></p>
         </div>
       </div>
