--- a/design/Paging_Manage/process_details_with_error_modal__1_.html
+++ b/design/Paging_Manage/process_details_with_error_modal__1_.html
@@ -97,16 +97,16 @@
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u211" class="ax_default box_1">
+      <div id="u211" class="ax_default link_button">
         <div id="u211_div" class=""></div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u212" class="ax_default link_button">
-        <div id="u212_div" class=""></div>
-        <div id="u212_text" class="text ">
+        <div id="u211_text" class="text ">
           <p><span>Instance Details</span></p>
         </div>
+      </div>
+
+      <!-- Unnamed (Horizontal Line) -->
+      <div id="u212" class="ax_default line">
+        <img id="u212_img" class="img " src="images/process_details_with_error_modal__1_/u212.png"/>
       </div>
 
       <!-- Unnamed (Horizontal Line) -->
@@ -114,16 +114,19 @@
         <img id="u213_img" class="img " src="images/process_details_with_error_modal__1_/u213.png"/>
       </div>
 
-      <!-- Unnamed (Horizontal Line) -->
-      <div id="u214" class="ax_default line">
-        <img id="u214_img" class="img " src="images/process_details_with_error_modal__1_/u214.png"/>
+      <!-- Unnamed (Rectangle) -->
+      <div id="u214" class="ax_default link_button">
+        <div id="u214_div" class=""></div>
+        <div id="u214_text" class="text ">
+          <p><span>Active</span></p>
+        </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u215" class="ax_default link_button">
         <div id="u215_div" class=""></div>
         <div id="u215_text" class="text ">
-          <p><span>Process Variables</span></p>
+          <p><span>Process Log</span></p>
         </div>
       </div>
 
@@ -131,7 +134,7 @@
       <div id="u216" class="ax_default link_button">
         <div id="u216_div" class=""></div>
         <div id="u216_text" class="text ">
-          <p><span>Active</span></p>
+          <p><span style="font-family:'OpenSans-Bold', 'Open Sans Bold', 'Open Sans';font-weight:700;">Process Error (ID 1)</span></p><p><span style="font-family:'OpenSans', 'Open Sans';font-weight:400;color:#666666;">Deployment ID: thrower-project_1.0.0</span></p><p><span style="font-family:'OpenSans', 'Open Sans';font-weight:400;color:#666666;">Error Date: 22-Aug-2017 14:43:39</span></p>
         </div>
       </div>
 
@@ -139,7 +142,7 @@
       <div id="u217" class="ax_default link_button">
         <div id="u217_div" class=""></div>
         <div id="u217_text" class="text ">
-          <p><span>Process Log</span></p>
+          <p><span style="font-family:'OpenSans-Bold', 'Open Sans Bold', 'Open Sans';font-weight:700;">Process Error (ID 2)</span></p><p><span style="font-family:'OpenSans', 'Open Sans';font-weight:400;color:#666666;">Deployment ID: thrower-project_1.0.0</span></p><p><span style="font-family:'OpenSans', 'Open Sans';font-weight:400;color:#666666;">Error Date: 22-Aug-2017 14:43:39</span></p>
         </div>
       </div>
 
@@ -147,40 +150,40 @@
       <div id="u218" class="ax_default link_button">
         <div id="u218_div" class=""></div>
         <div id="u218_text" class="text ">
-          <p><span style="font-family:'OpenSans-Bold', 'Open Sans Bold', 'Open Sans';font-weight:700;">Process Error (ID 1)</span></p><p><span style="font-family:'OpenSans', 'Open Sans';font-weight:400;color:#666666;">Deployment ID: thrower-project_1.0.0</span></p><p><span style="font-family:'OpenSans', 'Open Sans';font-weight:400;color:#666666;">Error Date: 22-Aug-2017 14:43:39</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u219" class="ax_default link_button">
-        <div id="u219_div" class=""></div>
-        <div id="u219_text" class="text ">
-          <p><span style="font-family:'OpenSans-Bold', 'Open Sans Bold', 'Open Sans';font-weight:700;">Process Error (ID 2)</span></p><p><span style="font-family:'OpenSans', 'Open Sans';font-weight:400;color:#666666;">Deployment ID: thrower-project_1.0.0</span></p><p><span style="font-family:'OpenSans', 'Open Sans';font-weight:400;color:#666666;">Error Date: 22-Aug-2017 14:43:39</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u220" class="ax_default link_button">
-        <div id="u220_div" class=""></div>
-        <div id="u220_text" class="text ">
           <p><span style="font-family:'OpenSans-Bold', 'Open Sans Bold', 'Open Sans';font-weight:700;">Process Error (ID 3)</span></p><p><span style="font-family:'OpenSans', 'Open Sans';font-weight:400;color:#666666;">Deployment ID: thrower-project_1.0.0</span></p><p><span style="font-family:'OpenSans', 'Open Sans';font-weight:400;color:#666666;">Error Date: 22-Aug-2017 14:43:39</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Group) -->
-      <div id="u221" class="ax_default" data-left="439" data-top="479" data-width="64" data-height="55">
+      <div id="u219" class="ax_default" data-left="439" data-top="479" data-width="64" data-height="55">
 
         <!-- Unnamed (Rectangle) -->
-        <div id="u222" class="ax_default paragraph">
-          <div id="u222_div" class=""></div>
-          <div id="u222_text" class="text ">
+        <div id="u220" class="ax_default paragraph">
+          <div id="u220_div" class=""></div>
+          <div id="u220_text" class="text ">
             <p><span>View All</span></p>
           </div>
         </div>
 
         <!-- external link icon (Shape) -->
-        <div id="u223" class="ax_default icon" data-label="external link icon">
-          <img id="u223_img" class="img " src="images/process_details_with_error_modal__1_/external_link_icon_u223.png"/>
+        <div id="u221" class="ax_default icon" data-label="external link icon">
+          <img id="u221_img" class="img " src="images/process_details_with_error_modal__1_/external_link_icon_u221.png"/>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u222" class="ax_default link_button">
+        <div id="u222_div" class=""></div>
+        <div id="u222_text" class="text ">
+          <p><span>Activities</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u223" class="ax_default link_button">
+        <div id="u223_div" class=""></div>
+        <div id="u223_text" class="text ">
+          <p><span>Deployment</span></p><p><span>Definition Version</span></p><p><span>Correlation Key</span></p><p><span>Parent Process Instance</span></p><p><span><br></span></p><p><span><br></span></p>
         </div>
       </div>
 
@@ -188,39 +191,39 @@
       <div id="u224" class="ax_default link_button">
         <div id="u224_div" class=""></div>
         <div id="u224_text" class="text ">
-          <p><span>Activities</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u225" class="ax_default link_button">
-        <div id="u225_div" class=""></div>
-        <div id="u225_text" class="text ">
-          <p><span>Deployment</span></p><p><span>Definition Version</span></p><p><span>Correlation Key</span></p><p><span>Parent Process Instance</span></p><p><span><br></span></p><p><span><br></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u226" class="ax_default link_button">
-        <div id="u226_div" class=""></div>
-        <div id="u226_text" class="text ">
           <p><span>Staging</span></p><p><span>1.0</span></p><p><span>200100</span></p><p><span>N/A</span></p><p><span><br></span></p><p><span><br></span></p>
         </div>
       </div>
 
       <!-- Example task link (Rectangle) -->
-      <div id="u227" class="ax_default link_button" data-label="Example task link">
-        <div id="u227_div" class=""></div>
-        <div id="u227_text" class="text ">
+      <div id="u225" class="ax_default link_button" data-label="Example task link">
+        <div id="u225_div" class=""></div>
+        <div id="u225_text" class="text ">
           <p><span>-&nbsp; &nbsp; Example Task</span></p><p><span>-&nbsp; &nbsp; Some Other Task</span></p>
         </div>
       </div>
 
       <!-- Example task link (Rectangle) -->
-      <div id="u228" class="ax_default link_button" data-label="Example task link">
+      <div id="u226" class="ax_default link_button" data-label="Example task link">
+        <div id="u226_div" class=""></div>
+        <div id="u226_text" class="text ">
+          <p><span>Active User Tasks</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u227" class="ax_default paragraph">
+        <div id="u227_div" class=""></div>
+        <div id="u227_text" class="text ">
+          <p><span style="font-family:'FontAwesome';">&nbsp; </span><span style="font-family:'OpenSans', 'Open Sans';font-size:10px;">Back</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u228" class="ax_default paragraph">
         <div id="u228_div" class=""></div>
         <div id="u228_text" class="text ">
-          <p><span>Active User Tasks</span></p>
+          <p><span>Manage</span></p>
         </div>
       </div>
 
@@ -228,7 +231,7 @@
       <div id="u229" class="ax_default paragraph">
         <div id="u229_div" class=""></div>
         <div id="u229_text" class="text ">
-          <p><span style="font-family:'FontAwesome';">&nbsp; </span><span style="font-family:'OpenSans', 'Open Sans';font-size:10px;">Back</span></p>
+          <p><span></span></p>
         </div>
       </div>
 
@@ -236,7 +239,7 @@
       <div id="u230" class="ax_default paragraph">
         <div id="u230_div" class=""></div>
         <div id="u230_text" class="text ">
-          <p><span>Manage</span></p>
+          <p><span></span></p>
         </div>
       </div>
 
@@ -244,127 +247,127 @@
       <div id="u231" class="ax_default paragraph">
         <div id="u231_div" class=""></div>
         <div id="u231_text" class="text ">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u232" class="ax_default paragraph">
-        <div id="u232_div" class=""></div>
-        <div id="u232_text" class="text ">
-          <p><span></span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u233" class="ax_default paragraph">
-        <div id="u233_div" class=""></div>
-        <div id="u233_text" class="text ">
           <p><span>Instance Details</span></p>
         </div>
       </div>
 
       <!-- Task list (Rectangle) -->
-      <div id="u234" class="ax_default link_button" data-label="Task list">
-        <div id="u234_div" class=""></div>
-        <div id="u234_text" class="text ">
+      <div id="u232" class="ax_default link_button" data-label="Task list">
+        <div id="u232_div" class=""></div>
+        <div id="u232_text" class="text ">
           <p><span>Process List</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Vertical Line) -->
-      <div id="u235" class="ax_default line">
-        <img id="u235_img" class="img " src="images/process_details_with_error_modal__1_/u235.png"/>
-      </div>
-
-      <!-- Unnamed (Horizontal Line) -->
-      <div id="u236" class="ax_default line">
-        <img id="u236_img" class="img " src="images/process_details_with_error_modal__1_/u236.png"/>
+      <div id="u233" class="ax_default line">
+        <img id="u233_img" class="img " src="images/process_details_with_error_modal__1_/u233.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u237" class="ax_default paragraph">
-        <div id="u237_div" class=""></div>
-        <div id="u237_text" class="text ">
+      <div id="u234" class="ax_default paragraph">
+        <div id="u234_div" class=""></div>
+        <div id="u234_text" class="text ">
           <p><span>Current Activities</span></p>
         </div>
       </div>
 
       <!-- View All Tasks (Group) -->
-      <div id="u238" class="ax_default" data-label="View All Tasks" data-left="77" data-top="876" data-width="58" data-height="14">
+      <div id="u235" class="ax_default" data-label="View All Tasks" data-left="105" data-top="894" data-width="58" data-height="14">
 
         <!-- Unnamed (Shape) -->
-        <div id="u239" class="ax_default icon">
-          <img id="u239_img" class="img " src="images/process_details_with_error_modal__1_/u239.png"/>
+        <div id="u236" class="ax_default icon">
+          <img id="u236_img" class="img " src="images/process_details_with_error_modal__1_/u236.png"/>
         </div>
 
         <!-- Unnamed (Rectangle) -->
-        <div id="u240" class="ax_default paragraph">
-          <div id="u240_div" class=""></div>
-          <div id="u240_text" class="text ">
+        <div id="u237" class="ax_default paragraph">
+          <div id="u237_div" class=""></div>
+          <div id="u237_text" class="text ">
             <p><span>View All </span></p>
           </div>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u241" class="ax_default paragraph">
-        <div id="u241_div" class=""></div>
-        <div id="u241_text" class="text ">
+      <div id="u238" class="ax_default paragraph">
+        <div id="u238_div" class=""></div>
+        <div id="u238_text" class="text ">
           <p><span>Submit</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Group) -->
-      <div id="u242" class="ax_default" data-left="59" data-top="650" data-width="762" data-height="150">
+      <div id="u239" class="ax_default" data-left="59" data-top="650" data-width="741" data-height="150">
 
         <!-- Unnamed (Image) -->
-        <div id="u243" class="ax_default image">
-          <img id="u243_img" class="img " src="images/process_details_with_error_modal__1_/u243.png"/>
+        <div id="u240" class="ax_default image">
+          <img id="u240_img" class="img " src="images/process_details_with_error_modal__1_/u240.png"/>
         </div>
 
         <!-- Unnamed (Rectangle) -->
-        <div id="u244" class="ax_default box_2">
-          <div id="u244_div" class=""></div>
+        <div id="u241" class="ax_default box_2">
+          <div id="u241_div" class=""></div>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u245" class="ax_default link_button">
-        <div id="u245_div" class=""></div>
-        <div id="u245_text" class="text ">
+      <div id="u242" class="ax_default link_button">
+        <div id="u242_div" class=""></div>
+        <div id="u242_text" class="text ">
           <p><span>Errors</span></p>
         </div>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u246" class="ax_default box_1">
-        <div id="u246_div" class=""></div>
+      <div id="u243" class="ax_default box_1">
+        <div id="u243_div" class=""></div>
       </div>
 
       <!-- Unnamed (Vertical Line) -->
-      <div id="u247" class="ax_default line">
-        <img id="u247_img" class="img " src="images/process_details_with_error_modal__1_/u247.png"/>
+      <div id="u244" class="ax_default line">
+        <img id="u244_img" class="img " src="images/process_details_with_error_modal__1_/u244.png"/>
       </div>
 
       <!-- Unnamed (Vertical Line) -->
-      <div id="u248" class="ax_default line">
-        <img id="u248_img" class="img " src="images/process_details_with_error_modal__1_/u248.png"/>
+      <div id="u245" class="ax_default line">
+        <img id="u245_img" class="img " src="images/process_details_with_error_modal__1_/u245.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u249" class="ax_default label">
-        <div id="u249_div" class=""></div>
-        <div id="u249_text" class="text ">
+      <div id="u246" class="ax_default label">
+        <div id="u246_div" class=""></div>
+        <div id="u246_text" class="text ">
           <p><span></span></p>
         </div>
       </div>
 
       <!-- error bage (Rectangle) -->
-      <div id="u250" class="ax_default box_1" data-label="error bage">
-        <img id="u250_img" class="img " src="images/process_details_with_error_modal__1_/error_bage_u250.png"/>
-        <div id="u250_text" class="text ">
+      <div id="u247" class="ax_default box_1" data-label="error bage">
+        <img id="u247_img" class="img " src="images/process_details_with_error_modal__1_/error_bage_u247.png"/>
+        <div id="u247_text" class="text ">
           <p><span>3</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u248" class="ax_default link_button">
+        <div id="u248_div" class=""></div>
+        <div id="u248_text" class="text ">
+          <p><span>Errors</span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u249" class="ax_default image">
+        <img id="u249_img" class="img " src="images/process_details_with_error_modal__1_/u249.png"/>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u250" class="ax_default link_button">
+        <div id="u250_div" class=""></div>
+        <div id="u250_text" class="text ">
+          <p><span>Details</span></p>
         </div>
       </div>
 
@@ -372,41 +375,38 @@
       <div id="u251" class="ax_default link_button">
         <div id="u251_div" class=""></div>
         <div id="u251_text" class="text ">
-          <p><span>Errors</span></p>
+          <p><span>Process Instance ID: 00012345</span></p>
         </div>
-      </div>
-
-      <!-- Unnamed (Image) -->
-      <div id="u252" class="ax_default image">
-        <img id="u252_img" class="img " src="images/process_details_with_error_modal__1_/u252.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
-      <div id="u253" class="ax_default link_button">
-        <div id="u253_div" class=""></div>
-        <div id="u253_text" class="text ">
-          <p><span>Details</span></p>
+      <div id="u252" class="ax_default link_button">
+        <div id="u252_div" class=""></div>
+        <div id="u252_text" class="text ">
+          <p><span>Variables?</span></p>
         </div>
+      </div>
+
+      <!-- Unnamed (Horizontal Line) -->
+      <div id="u253" class="ax_default line">
+        <img id="u253_img" class="img " src="images/process_details_with_error_modal__1_/u253.png"/>
       </div>
 
       <!-- Unnamed (Rectangle) -->
       <div id="u254" class="ax_default link_button">
         <div id="u254_div" class=""></div>
         <div id="u254_text" class="text ">
-          <p><span>Process Instance ID: 00012345</span></p>
-        </div>
-      </div>
-
-      <!-- Unnamed (Rectangle) -->
-      <div id="u255" class="ax_default link_button">
-        <div id="u255_div" class=""></div>
-        <div id="u255_text" class="text ">
           <p><span>Documents</span></p>
         </div>
       </div>
 
-      <!-- Unnamed (Horizontal Line) -->
-      <div id="u256" class="ax_default line">
+      <!-- Unnamed (Vertical Line) -->
+      <div id="u255" class="ax_default line">
+        <img id="u255_img" class="img " src="images/process_details_with_error_modal__1_/u244.png"/>
+      </div>
+
+      <!-- Unnamed (Image) -->
+      <div id="u256" class="ax_default image">
         <img id="u256_img" class="img " src="images/process_details_with_error_modal__1_/u256.png"/>
       </div>
 
