--- a/design/Paging_Manage/home.html
+++ b/design/Paging_Manage/home.html
@@ -2282,18 +2282,34 @@
         </div>
       </div>
 
-      <!-- header hover (Group) -->
-      <div id="u200" class="ax_default" data-label="header hover" data-left="545" data-top="228" data-width="32" data-height="40">
+      <!-- header-hover (Rectangle) -->
+      <div id="u200" class="ax_default box_2" data-label="header-hover">
+        <img id="u200_img" class="img " src="images/home/header-hover_u200.png"/>
+      </div>
 
-        <!-- header-hover (Rectangle) -->
-        <div id="u201" class="ax_default box_2" data-label="header-hover">
-          <div id="u201_div" class=""></div>
-        </div>
+      <!-- col-line 2 (Vertical Line) -->
+      <div id="u201" class="ax_default line disabled" data-label="col-line 2">
+        <img id="u201_img" class="img " src="images/home/col-line_2_u201.png"/>
+      </div>
 
-        <!-- col-line (Vertical Line) -->
-        <div id="u202" class="ax_default line" data-label="col-line">
-          <img id="u202_img" class="img " src="images/home/col-line_u202.png"/>
-        </div>
+      <!-- col-line (Vertical Line) -->
+      <div id="u202" class="ax_default line" data-label="col-line">
+        <img id="u202_img" class="img " src="images/home/col-line_2_u201.png"/>
+      </div>
+
+      <!-- col-line (Vertical Line) -->
+      <div id="u203" class="ax_default line" data-label="col-line">
+        <img id="u203_img" class="img " src="images/home/col-line_2_u201.png"/>
+      </div>
+
+      <!-- col-line (Vertical Line) -->
+      <div id="u204" class="ax_default line" data-label="col-line">
+        <img id="u204_img" class="img " src="images/home/col-line_2_u201.png"/>
+      </div>
+
+      <!-- col-line (Vertical Line) -->
+      <div id="u205" class="ax_default line" data-label="col-line">
+        <img id="u205_img" class="img " src="images/home/col-line_2_u201.png"/>
       </div>
     </div>
   </body>
