--- a/design/Manage-section/home.html
+++ b/design/Manage-section/home.html
@@ -1917,64 +1917,59 @@
                   </div>
                 </div>
 
-                <!-- Unnamed (Shape) -->
-                <div id="u150" class="ax_default icon">
-                  <img id="u150_img" class="img " src="images/home/u150.png"/>
-                </div>
-
                 <!-- Text wildcard (Text Field) -->
-                <div id="u151" class="ax_default text_field" data-label="Text wildcard">
-                  <input id="u151_input" type="text" value=""/>
+                <div id="u150" class="ax_default text_field" data-label="Text wildcard">
+                  <input id="u150_input" type="text" value=""/>
                 </div>
 
                 <!-- errors (Group) -->
-                <div id="u152" class="ax_default" data-label="errors" data-left="9" data-top="267" data-width="212" data-height="96">
+                <div id="u151" class="ax_default" data-label="errors" data-left="9" data-top="267" data-width="212" data-height="96">
 
                   <!-- Unnamed (Rectangle) -->
-                  <div id="u153" class="ax_default box_1">
-                    <div id="u153_div" class=""></div>
+                  <div id="u152" class="ax_default box_1">
+                    <div id="u152_div" class=""></div>
                   </div>
 
                   <!-- Unnamed (Rectangle) -->
-                  <div id="u154" class="ax_default link_button">
-                    <div id="u154_div" class=""></div>
-                    <div id="u154_text" class="text ">
+                  <div id="u153" class="ax_default link_button">
+                    <div id="u153_div" class=""></div>
+                    <div id="u153_text" class="text ">
                       <p><span>Errors</span></p>
                     </div>
                   </div>
 
                   <!-- With (Checkbox) -->
-                  <div id="u155" class="ax_default checkbox" data-label="With">
+                  <div id="u154" class="ax_default checkbox" data-label="With">
+                    <label for="u154_input" style="position: absolute; left: 0px;">
+                      <div id="u154_text" class="text ">
+                        <p><span>With errors</span></p>
+                      </div>
+                    </label>
+                    <input id="u154_input" type="checkbox" value="checkbox"/>
+                  </div>
+
+                  <!-- Without (Checkbox) -->
+                  <div id="u155" class="ax_default checkbox" data-label="Without">
                     <label for="u155_input" style="position: absolute; left: 0px;">
                       <div id="u155_text" class="text ">
-                        <p><span>With errors</span></p>
+                        <p><span>Without errors</span></p>
                       </div>
                     </label>
                     <input id="u155_input" type="checkbox" value="checkbox"/>
                   </div>
 
-                  <!-- Without (Checkbox) -->
-                  <div id="u156" class="ax_default checkbox" data-label="Without">
-                    <label for="u156_input" style="position: absolute; left: 0px;">
-                      <div id="u156_text" class="text ">
-                        <p><span>Without errors</span></p>
-                      </div>
-                    </label>
-                    <input id="u156_input" type="checkbox" value="checkbox"/>
-                  </div>
-
                   <!-- Unnamed (Rectangle) -->
-                  <div id="u157" class="ax_default paragraph">
-                    <div id="u157_div" class=""></div>
-                    <div id="u157_text" class="text ">
+                  <div id="u156" class="ax_default paragraph">
+                    <div id="u156_div" class=""></div>
+                    <div id="u156_text" class="text ">
                       <p><span></span></p>
                     </div>
                   </div>
                 </div>
 
                 <!-- Start (Droplist) -->
-                <div id="u158" class="ax_default droplist" data-label="Start">
-                  <select id="u158_input">
+                <div id="u157" class="ax_default droplist" data-label="Start">
+                  <select id="u157_input">
                     <option selected value="Select">Select</option>
                     <option value="Today">Today</option>
                     <option value="Yesterday">Yesterday</option>
@@ -1985,16 +1980,16 @@
                 </div>
 
                 <!-- Last Update (Rectangle) -->
-                <div id="u159" class="ax_default link_button" data-label="Last Update">
-                  <div id="u159_div" class=""></div>
-                  <div id="u159_text" class="text ">
+                <div id="u158" class="ax_default link_button" data-label="Last Update">
+                  <div id="u158_div" class=""></div>
+                  <div id="u158_text" class="text ">
                     <p><span>Last Update</span></p>
                   </div>
                 </div>
 
                 <!-- Update  (Droplist) -->
-                <div id="u160" class="ax_default droplist" data-label="Update ">
-                  <select id="u160_input">
+                <div id="u159" class="ax_default droplist" data-label="Update ">
+                  <select id="u159_input">
                     <option selected value="Select">Select</option>
                     <option value="Today">Today</option>
                     <option value="Yesterday">Yesterday</option>
@@ -2004,16 +1999,27 @@
                   </select>
                 </div>
 
-                <!-- Unnamed (Shape) -->
-                <div id="u161" class="ax_default icon">
-                  <img id="u161_img" class="img " src="images/home/u150.png"/>
+                <!-- reset dates (Rectangle) -->
+                <div id="u160" class="ax_default link_button selected" data-label="reset dates">
+                  <div id="u160_div" class="selected"></div>
+                  <div id="u160_text" class="text ">
+                    <p><span>Clear Dates</span></p>
+                  </div>
                 </div>
 
-                <!-- reset dates (Rectangle) -->
-                <div id="u162" class="ax_default link_button selected" data-label="reset dates">
-                  <div id="u162_div" class="selected"></div>
+                <!-- date2 (Rectangle) -->
+                <div id="u161" class="ax_default label" data-label="date2">
+                  <div id="u161_div" class=""></div>
+                  <div id="u161_text" class="text ">
+                    <p><span></span></p>
+                  </div>
+                </div>
+
+                <!-- date (Rectangle) -->
+                <div id="u162" class="ax_default label" data-label="date">
+                  <div id="u162_div" class=""></div>
                   <div id="u162_text" class="text ">
-                    <p><span>Clear Dates</span></p>
+                    <p><span></span></p>
                   </div>
                 </div>
 
