--- a/design/Manage-section/home.html
+++ b/design/Manage-section/home.html
@@ -9,6 +9,7 @@
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
     <link href="files/home/styles.css" type="text/css" rel="stylesheet"/>
+    <link href="<link rel="stylesheet" href="/font-awesome/css/font-awesome.min.css"> " type="text/css" rel="stylesheet"/>
     <script src="resources/scripts/jquery-1.7.1.min.js"></script>
     <script src="resources/scripts/jquery-ui-1.8.10.custom.min.js"></script>
     <script src="resources/scripts/prototypePre.js"></script>
@@ -1544,7 +1545,7 @@
         <div id="u100" class="ax_default paragraph">
           <div id="u100_div" class=""></div>
           <div id="u100_text" class="text ">
-            <p><span>Select a saved filter to clear existing filters and apply saved ones. </span></p>
+            <p><span>Saved filter queries are listed below. Select a list item to apply the associated filters. </span></p>
           </div>
         </div>
 
