--- a/design/Palette_demo/home.html
+++ b/design/Palette_demo/home.html
@@ -90,7 +90,7 @@
               <div id="u9" class="ax_default label">
                 <div id="u9_div" class=""></div>
                 <div id="u9_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'OpenSans', 'Open Sans';color:#363636;">Item One</span></p>
+                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'Helvetica';color:#363636;">Item One</span></p>
                 </div>
               </div>
 
@@ -98,7 +98,7 @@
               <div id="u10" class="ax_default label">
                 <div id="u10_div" class=""></div>
                 <div id="u10_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"> </span><span style="font-family:'OpenSans', 'Open Sans';color:#363636;">Item Two with a really </span><span style="font-family:'OpenSans', 'Open Sans';color:#FFFFFF;">lon</span><span style="font-family:'OpenSans', 'Open Sans';color:#363636;">long name&nbsp; </span></p>
+                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"> </span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#363636;">Item Two with a really </span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#FFFFFF;">lon</span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#363636;">long name&nbsp; </span></p>
                 </div>
               </div>
 
@@ -106,7 +106,7 @@
               <div id="u11" class="ax_default label">
                 <div id="u11_div" class=""></div>
                 <div id="u11_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'OpenSans', 'Open Sans';color:#363636;">Item Three</span></p>
+                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#363636;">Item Three</span></p>
                 </div>
               </div>
             </div>
@@ -143,7 +143,7 @@
               <div id="u16" class="ax_default label">
                 <div id="u16_div" class=""></div>
                 <div id="u16_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:14px;color:#CC0000;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'OpenSans', 'Open Sans';color:#363636;">Item One</span></p>
+                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:14px;color:#CC0000;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#363636;">Item One</span></p>
                 </div>
               </div>
 
@@ -151,7 +151,7 @@
               <div id="u17" class="ax_default label">
                 <div id="u17_div" class=""></div>
                 <div id="u17_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#CC0000;"></span><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"> </span><span style="font-family:'OpenSans', 'Open Sans';color:#363636;">Item Two with a really </span><span style="font-family:'OpenSans', 'Open Sans';color:#FFFFFF;">lon</span><span style="font-family:'OpenSans', 'Open Sans';color:#363636;">long name&nbsp; </span></p>
+                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#CC0000;"></span><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"> </span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#363636;">Item Two with a really </span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#FFFFFF;">lon</span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#363636;">long name&nbsp; </span></p>
                 </div>
               </div>
 
@@ -159,7 +159,7 @@
               <div id="u18" class="ax_default label">
                 <div id="u18_div" class=""></div>
                 <div id="u18_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#CC0000;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'OpenSans', 'Open Sans';color:#363636;">Item Three</span></p>
+                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#CC0000;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#363636;">Item Three</span></p>
                 </div>
               </div>
             </div>
