--- a/design/Palette_demo/home.html
+++ b/design/Palette_demo/home.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
     <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
-    <link href="resources/css/jquery-ui-themes.css" type="text/css" rel="stylesheet"/>
     <link href="resources/css/axure_rp_page.css" type="text/css" rel="stylesheet"/>
     <link href="data/styles.css" type="text/css" rel="stylesheet"/>
     <link href="files/home/styles.css" type="text/css" rel="stylesheet"/>
@@ -98,7 +97,7 @@
               <div id="u10" class="ax_default label">
                 <div id="u10_div" class=""></div>
                 <div id="u10_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"> </span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#363636;">Item Two with a really </span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#FFFFFF;">lon</span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#363636;">long name&nbsp; </span></p>
+                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"> </span><span style="font-family:'sans-serif';color:#363636;">Item Two with a really </span><span style="font-family:'sans-serif';color:#FFFFFF;">lon</span><span style="font-family:'sans-serif';color:#363636;">long name&nbsp; </span></p>
                 </div>
               </div>
 
@@ -106,7 +105,7 @@
               <div id="u11" class="ax_default label">
                 <div id="u11_div" class=""></div>
                 <div id="u11_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#363636;">Item Three</span></p>
+                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'sans-serif';color:#363636;">Item Three</span></p>
                 </div>
               </div>
             </div>
@@ -143,7 +142,7 @@
               <div id="u16" class="ax_default label">
                 <div id="u16_div" class=""></div>
                 <div id="u16_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:14px;color:#CC0000;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#363636;">Item One</span></p>
+                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:14px;color:#CC0000;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'sans-serif';color:#363636;">Item One</span></p>
                 </div>
               </div>
 
@@ -151,7 +150,7 @@
               <div id="u17" class="ax_default label">
                 <div id="u17_div" class=""></div>
                 <div id="u17_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#CC0000;"></span><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"> </span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#363636;">Item Two with a really </span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#FFFFFF;">lon</span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#363636;">long name&nbsp; </span></p>
+                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#CC0000;"></span><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"> </span><span style="font-family:'sans-serif';color:#363636;">Item Two with a really </span><span style="font-family:'sans-serif';color:#FFFFFF;">lon</span><span style="font-family:'sans-serif';color:#363636;">long name&nbsp; </span></p>
                 </div>
               </div>
 
@@ -159,7 +158,7 @@
               <div id="u18" class="ax_default label">
                 <div id="u18_div" class=""></div>
                 <div id="u18_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#CC0000;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'Arial', 'Helvetica', 'sans-serif';color:#363636;">Item Three</span></p>
+                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#CC0000;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'sans-serif';color:#363636;">Item Three</span></p>
                 </div>
               </div>
             </div>
