--- a/design/Palette_demo/home.html
+++ b/design/Palette_demo/home.html
@@ -83,13 +83,13 @@
             </div>
 
             <!-- List items (Group) -->
-            <div id="u8" class="ax_default" data-label="List items" data-left="10" data-top="45" data-width="182" data-height="95">
+            <div id="u8" class="ax_default" data-label="List items" data-left="10" data-top="45" data-width="182" data-height="94">
 
               <!-- Unnamed (Rectangle) -->
               <div id="u9" class="ax_default label">
                 <div id="u9_div" class=""></div>
                 <div id="u9_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'Helvetica';color:#363636;">Item One</span></p>
+                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'ArialMT', 'Arial';color:#363636;">Item One</span></p>
                 </div>
               </div>
 
@@ -97,7 +97,7 @@
               <div id="u10" class="ax_default label">
                 <div id="u10_div" class=""></div>
                 <div id="u10_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"> </span><span style="font-family:'sans-serif';color:#363636;">Item Two with a really </span><span style="font-family:'sans-serif';color:#FFFFFF;">lon</span><span style="font-family:'sans-serif';color:#363636;">long name&nbsp; </span></p>
+                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"> </span><span style="font-family:'ArialMT', 'Arial';color:#363636;">Item Two with a really </span><span style="font-family:'ArialMT', 'Arial';color:#FFFFFF;">lon.</span><span style="font-family:'ArialMT', 'Arial';color:#363636;">long name </span><span style="font-family:'sans-serif';color:#363636;"> </span></p>
                 </div>
               </div>
 
@@ -105,7 +105,7 @@
               <div id="u11" class="ax_default label">
                 <div id="u11_div" class=""></div>
                 <div id="u11_text" class="text ">
-                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'sans-serif';color:#363636;">Item Three</span></p>
+                  <p style="font-size:11px;"><span style="font-family:'FontAwesome';font-size:16px;color:#009900;"></span><span style="font-family:'FontAwesome';font-size:14px;color:#009900;"> </span><span style="font-family:'ArialMT', 'Arial';color:#363636;">Item Three</span></p>
                 </div>
               </div>
             </div>
