--- a/design/Palette_demo/spacing_style_specs__approx_.html
+++ b/design/Palette_demo/spacing_style_specs__approx_.html
@@ -210,6 +210,9 @@
         </div>
       </div>
 
+      <!-- Unnamed (Rectangle) [footnote] -->
+      <div id="u37_ann" class="annotation"></div>
+
       <!-- Unnamed (Vertical Line) -->
       <div id="u38" class="ax_default line">
         <img id="u38_img" class="img " src="images/spacing_style_specs__approx_/u38.png"/>
@@ -219,7 +222,7 @@
       <div id="u39" class="ax_default label">
         <div id="u39_div" class=""></div>
         <div id="u39_text" class="text ">
-          <p><span>PF default text, with default line height. * Text labels should wrap as needed. . </span></p>
+          <p><span>TEXT: PF default text, with default line height. </span></p><p><span>* List text should wrap as needed. </span></p><p><span>* Category header: Either the existing subhead styles (CAPS) or bolded default text.&nbsp; </span></p>
         </div>
       </div>
 
@@ -327,6 +330,14 @@
         <div id="u55_div" class=""></div>
         <div id="u55_text" class="text ">
           <p><span style="font-family:'Arial-BoldMT', 'Arial Bold', 'Arial';font-weight:700;">Flyout :</span></p><p><span style="font-family:'ArialMT', 'Arial';font-weight:400;"><br></span></p><p><span style="font-family:'ArialMT', 'Arial';font-weight:400;">* The width of the flyout should not respond to content changes, rather should be fixed. It is currently mocked up at 200 px. </span></p><p><span style="font-family:'ArialMT', 'Arial';font-weight:400;"><br></span></p><p><span style="font-family:'ArialMT', 'Arial';font-weight:400;">* The min height of the flyout should match the height of the toolbar itself. The height should increase to accomodate content.&nbsp; </span></p><p><span style="font-family:'ArialMT', 'Arial';font-weight:400;"><br></span></p><p><span style="font-family:'ArialMT', 'Arial';font-weight:400;">* Border color should match PF button border color.</span></p><p><span style="font-family:'ArialMT', 'Arial';font-weight:400;"><br></span></p><p><span style="font-family:'ArialMT', 'Arial';font-weight:400;">* Should present a shadow to the left only. I used a 20px CCC one with a 20px blur, at 35% opacity but it's kind of a hack...</span></p><p><span style="font-family:'ArialMT', 'Arial';font-weight:400;"><br></span></p><p><span style="font-family:'ArialMT', 'Arial';font-weight:400;"><br></span></p><p><span style="font-family:'ArialMT', 'Arial';font-weight:400;"><br></span></p><p><span style="font-family:'ArialMT', 'Arial';font-weight:400;"><br></span></p><p><span style="font-family:'ArialMT', 'Arial';font-weight:400;"><br></span></p>
+        </div>
+      </div>
+
+      <!-- Unnamed (Rectangle) -->
+      <div id="u56" class="ax_default sticky_4">
+        <div id="u56_div" class=""></div>
+        <div id="u56_text" class="text ">
+          <p><span>@Sarah - please keep the toolbar button borders all around when the menu is open, as it's mocked up. Thanks! :)</span></p>
         </div>
       </div>
     </div>
