--- a/design/Manage-section/process_details_existing.html
+++ b/design/Manage-section/process_details_existing.html
@@ -448,7 +448,7 @@
       <div id="u340" class="ax_default paragraph">
         <div id="u340_div" class=""></div>
         <div id="u340_text" class="text ">
-          <p><span style="font-family:'FontAwesome';">&nbsp; </span><span style="font-family:'OpenSans', 'Open Sans';font-size:10px;">Back</span></p>
+          <p style="font-size:13px;"><span style="font-family:'FontAwesome';">&nbsp; </span><span style="font-family:'OpenSans', 'Open Sans';font-size:10px;">Back</span></p>
         </div>
       </div>
 
@@ -512,7 +512,7 @@
         <div id="u349" class="ax_default button" data-label="Saved">
           <div id="u349_div" class=""></div>
           <div id="u349_text" class="text ">
-            <p><span style="font-family:'FontAwesome';font-weight:400;font-size:14px;"></span><span style="font-family:'FontAwesome';font-weight:400;font-size:20px;"> </span><span style="font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';font-weight:600;font-size:11px;"> </span></p>
+            <p style="font-size:20px;"><span style="font-family:'FontAwesome';font-weight:400;font-size:14px;"></span><span style="font-family:'FontAwesome';font-weight:400;"> </span><span style="font-family:'OpenSans-Semibold', 'Open Sans Semibold', 'Open Sans';font-weight:650;font-size:11px;"> </span></p>
           </div>
         </div>
 
