--- a/design/Manage-section/process_details_new.html
+++ b/design/Manage-section/process_details_new.html
@@ -190,7 +190,7 @@
       <div id="u238" class="ax_default paragraph">
         <div id="u238_div" class=""></div>
         <div id="u238_text" class="text ">
-          <p><span style="font-family:'FontAwesome';">&nbsp; </span><span style="font-family:'OpenSans', 'Open Sans';font-size:10px;">Back</span></p>
+          <p style="font-size:13px;"><span style="font-family:'FontAwesome';">&nbsp; </span><span style="font-family:'OpenSans', 'Open Sans';font-size:10px;">Back</span></p>
         </div>
       </div>
 
@@ -385,7 +385,7 @@
       <div id="u266" class="ax_default label">
         <div id="u266_div" class=""></div>
         <div id="u266_text" class="text ">
-          <p><span>150 </span><span style="font-size:11px;">Active</span></p>
+          <p style="font-size:11px;"><span style="font-size:14px;">150 </span><span>Active</span></p>
         </div>
       </div>
 
@@ -401,7 +401,7 @@
       <div id="u268" class="ax_default label">
         <div id="u268_div" class=""></div>
         <div id="u268_text" class="text ">
-          <p><span>300 </span><span style="font-size:11px;">Unacknowledged</span></p>
+          <p style="font-size:11px;"><span style="font-size:14px;">300 </span><span>Unacknowledged</span></p>
         </div>
       </div>
 
@@ -417,7 +417,7 @@
       <div id="u270" class="ax_default paragraph">
         <div id="u270_div" class=""></div>
         <div id="u270_text" class="text ">
-          <p><span style="font-size:14px;">5</span><span style="font-size:18px;"> </span><span style="font-size:11px;">User </span></p>
+          <p style="font-size:11px;"><span style="font-size:14px;">5</span><span style="font-size:18px;"> </span><span>User </span></p>
         </div>
       </div>
 
